k8s/payment/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: ecommerce
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: youssefar22/payment:latest
          ports:
            - containerPort: 3001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3001
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
