k8s/payment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: ecommerce
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
